# IdleGame

./: .gitignore  BIGNUMBER_FORMATTING.md  CLION_VCPKG_GUIDE.md  CMakeLists.txt  FIRST_PLAYABLE_STATUS.md  GITHUB_PAGES_DEPLOYMENT.md  QUICK_FIX.md  README.md  VCPKG_SETUP.md  VISUAL_STUDIO_GUIDE.md  WINDOWS_GMP_SETUP.md  app.py  diagnose-cmake.sh  vcpkg.json
.github/workflows/: deploy-gh-pages.yml
data/balance/: generators.json  prestige.json  upgrades.json
data/ui/: main_screen.rml
data/ui/styles/: main.rcss
src/: main.cpp
src/bridge/: CMakeLists.txt  CommandRouter.cpp  CommandRouter.h  DataBindingRegistry.cpp  DataBindingRegistry.h  EventBus.cpp  EventBus.h  UpdateThrottle.cpp  UpdateThrottle.h
src/core/: BigNumber.cpp  BigNumber.h  CMakeLists.txt  GameState.cpp  GameState.h  ParadoxEngine.cpp  ParadoxEngine.h  PrestigeSystem.cpp  PrestigeSystem.h  ResourceManager.cpp  ResourceManager.h  TickSystem.cpp  TickSystem.h  TimeBank.cpp  TimeBank.h
src/core/events/: Event.h  GameEvents.h
src/core/serialization/: BigNumberConverter.cpp  BigNumberConverter.h  ISerializable.h  JsonAdapter.cpp  JsonAdapter.h
src/platform/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  Window.cpp  Window.h
src/platform/emscripten/: EmscriptenLoop.cpp  EmscriptenLoop.h  RmlUiSystemInterface.cpp  RmlUiSystemInterface.h
src/platform/rmlui_backend/: RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_GL2.cpp  RmlUi_Renderer_GL2.h
src/view/: CMakeLists.txt  DataModelBinder.cpp  DataModelBinder.h  RmlUiContext.cpp  RmlUiContext.h  ScreenManager.cpp  ScreenManager.h
src/view/custom_elements/: ParadoxMeter.cpp  ParadoxMeter.h  TimelineCanvas.cpp  TimelineCanvas.h
tests/: CMakeLists.txt
tests/core/: BigNumberTest.cpp
web/: index.html
